--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,7 @@ dependencies {
     implementation project(':net:sync:model')
     implementation project(':ui:app-start-intent')
     implementation project(':ui:common')
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
     annotationProcessor "androidx.annotation:annotation:$annotationVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
