Only declare used ExoPlayer submodules

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ project.ext {
     rxAndroidVersion = "2.1.1"
     rxJavaVersion = "2.2.2"
     iconifyVersion = "2.2.2"
+    exoPlayerVersion = "2.11.8"
     audioPlayerVersion = "v2.0.0"
 
     // Only used for free builds. This version should be updated regularly.
