Moved feed parser to its own module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,7 @@ dependencies {
     implementation project(':model')
     implementation project(':net:sync:gpoddernet')
     implementation project(':net:sync:model')
+    implementation project(':parser:feed')
     implementation project(':ui:app-start-intent')
     implementation project(':ui:common')
 
