--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,8 @@ include ':net:ssl'
 include ':net:sync:gpoddernet'
 include ':net:sync:model'
 
+include ':parser:feed'
+
 include ':ui:app-start-intent'
 include ':ui:common'
 include ':ui:png-icons'
