--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,9 @@ subprojects {
 
 project.ext {
     // AndroidX
-    annotationVersion = "1.1.0"
-    appcompatVersion = "1.2.0"
+    annotationVersion = "1.2.0"
+    appcompatVersion = "1.3.1"
+    coreVersion = "1.5.0"
     mediaVersion = "1.1.0"
     preferenceVersion = "1.1.1"
     workManagerVersion = "2.3.4"
