--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         // Version code schema:
         // "1.2.3-beta4"    -> 1020304
         // "1.2.3"          -> 1020395
-        versionCode 2030295
-        versionName "2.3.2"
+        versionCode 2040001
+        versionName "2.4.0-beta1"
 
         def commit = ""
         try {
