--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id('com.android.application')
     id('com.getkeepsafe.dexcount')
-    id('com.github.triplet.play') version '3.4.0' apply false
+    id('com.github.triplet.play') version '3.6.0-agp4.2' apply false
 }
 apply from: "../common.gradle"
 apply from: "../playFlavor.gradle"
@@ -76,9 +76,9 @@ android {
 
             dexcount {
                 if (project.hasProperty("enableDexcountInDebug")) {
-                    runOnEachPackage enableDexcountInDebug.toBoolean()
+                    runOnEachPackage = enableDexcountInDebug.toBoolean()
                 } else { // default to not running dexcount
-                    runOnEachPackage false
+                    runOnEachPackage = false
                 }
             }
         }
