--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         // Version code schema:
         // "1.2.3-beta4"    -> 1020304
         // "1.2.3"          -> 1020395
-        versionCode 2040095
-        versionName "2.4.0"
+        versionCode 05
+        versionName "0.5"
 
         def commit = ""
         try {
