--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.library"
+apply plugin: 'kotlin-android'
 apply from: "../common.gradle"
 
 dependencies {
@@ -6,4 +7,9 @@ dependencies {
     implementation "androidx.media:media:$mediaVersion"
 
     implementation "org.apache.commons:commons-lang3:$commonslangVersion"
+    implementation "androidx.core:core-ktx:$core_ktx_version+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
