--- a/parser/feed/build.gradle
+++ b/parser/feed/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.library"
+apply plugin: 'kotlin-android'
 apply from: "../../common.gradle"
 
 android {
@@ -20,4 +21,9 @@ dependencies {
 
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.robolectric:robolectric:4.5-alpha-1'
+    implementation "androidx.core:core-ktx:$core_ktx_version+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
