--- a/parser/media/build.gradle
+++ b/parser/media/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.library"
+apply plugin: 'kotlin-android'
 apply from: "../../common.gradle"
 
 dependencies {
@@ -9,4 +10,9 @@ dependencies {
     implementation "commons-io:commons-io:$commonsioVersion"
 
     testImplementation 'junit:junit:4.13'
+    implementation "androidx.core:core-ktx:$core_ktx_version+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
