--- a/ui/common/build.gradle
+++ b/ui/common/build.gradle
@@ -1,7 +1,13 @@
 apply plugin: "com.android.library"
+apply plugin: 'kotlin-android'
 apply from: "../../common.gradle"
 
 dependencies {
     annotationProcessor "androidx.annotation:annotation:$annotationVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    implementation "androidx.core:core-ktx:$core_ktx_version+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
