--- a/ui/png-icons/build.gradle
+++ b/ui/png-icons/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.library"
+apply plugin: 'kotlin-android'
 apply from: "../../common.gradle"
 
 android {
@@ -10,4 +11,9 @@ android {
 
 dependencies {
     annotationProcessor "androidx.annotation:annotation:$annotationVersion"
+    implementation "androidx.core:core-ktx:$core_ktx_version+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
