--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.6.0-RC2'
+    ext.kotlin_version = '1.5.30'
     ext.core_ktx_version = '1.6.0'
     repositories {
         google()
