--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ plugins {
 apply from: "../common.gradle"
 apply plugin: 'kotlin-android'
 apply from: "../playFlavor.gradle"
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
 android {
     defaultConfig {
         // Version code schema:
         // "1.2.3-beta4"    -> 1020304
         // "1.2.3"          -> 1020395
-        versionCode 1
-        versionName "0.5"
+        versionCode 2
+        versionName "0.5.1"
 
         def commit = ""
         try {
@@ -35,7 +35,7 @@ android {
             buildConfigField "String", "PODCASTINDEX_API_SECRET", '"XAaAhk4^2YBsTE33vdbwbZNj82ZRLABDDqFdKe7x"'
         }
 
-        javaCompileOptions {
+        javaCompileOptions {girt
             annotationProcessorOptions {
                 arguments = [eventBusIndex: 'de.danoeh.apexpod.ApEventBusIndex']
             }
@@ -160,8 +160,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     // Firebase
-    implementation platform('com.google.firebase:firebase-bom:29.0.3')
-    implementation 'com.google.firebase:firebase-analytics'
+//    implementation platform('com.google.firebase:firebase-bom:29.0.3')
+//    implementation 'com.google.firebase:firebase-analytics'
     // Non-free dependencies:
     playImplementation 'com.google.android.play:core:1.8.0'
     compileOnly "com.google.android.wearable:wearable:$wearableSupportVersion"
