--- a/net/ssl/build.gradle
+++ b/net/ssl/build.gradle
@@ -4,11 +4,13 @@ apply from: "../../common.gradle"
 apply from: "../../playFlavor.gradle"
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-basement:18.0.0'
+    implementation 'com.google.android.gms:play-services-base:18.0.1'
     annotationProcessor "androidx.annotation:annotation:$annotationVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
 
-    playImplementation "com.google.android.gms:play-services-base:$playServicesVersion"
+//    playImplementation "com.google.android.gms:play-services-base:$playServicesVersion"
     freeImplementation "org.conscrypt:conscrypt-android:$conscryptVersion"
     implementation "androidx.core:core-ktx:$core_ktx_version+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
