--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.5.30'
+    ext.kotlin_version = '1.7.10'
     ext.core_ktx_version = '1.6.0'
     repositories {
         google()
@@ -13,8 +13,8 @@ buildscript {
         classpath 'de.timfreiheit.resourceplaceholders:placeholders:0.4'
         classpath "gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:4.7.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.6'
     }
 }
 
@@ -49,8 +49,8 @@ project.ext {
     coreVersion = "1.5.0"
     fragmentVersion = "1.3.6"
     mediaVersion = "1.1.0"
-    preferenceVersion = "1.1.1"
-    workManagerVersion = "2.3.4"
+    preferenceVersion = "1.2.0"
+    workManagerVersion = "2.8.0"
     googleMaterialVersion = "1.1.0"
 
     // Third-party
@@ -72,7 +72,8 @@ project.ext {
 
     // Google Play build
     wearableSupportVersion = "2.6.0"
-    playServicesVersion = "8.4.0"
+    playServicesVersion = "21.3.0"
+    google_play_services_version = "22.0.0"
 
     //Tests
     awaitilityVersion = "3.1.6"
